--- a/config/db.conf
+++ b/config/db.conf
@@ -1,13 +1,13 @@
 [migrate_db]
 host = 10.15.4.28
 port = 3306
-db = unionbusiness
-user = mogu
-passwd = shark@)$^king
+db = db_name_1
+user = test
+passwd = test
 
 [db]
 host = 10.13.3.17
 port = 3306
-db = unionbusiness
-user = root
-passwd = root123
+db = db_name_2
+user = your username
+passwd = pwd
