表数据同步

--- a/config/db.conf
+++ b/config/db.conf
@@ -11,3 +11,11 @@ port = 3306
 db = db_name_2
 user = your username
 passwd = pwd
+
+
+[dev_db]
+host = 10.13.3.17
+port = 3306
+db = cpcdatas
+user = test
+passwd = test123
